--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,27 @@
-
+<html>
+  <head>
+    <link rel="stylesheet" href="./styles.css">
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td id="0_0" class="box"></td>
+        <td id="0_1" class="box"></td>
+        <td id="0_2" class="box"></td>
+      </tr>
+      <tr>
+        <td id="1_0" class="box"></td>
+        <td id="1_1" class="box"></td>
+        <td id="1_2" class="box"></td>
+      </tr>
+      <tr>
+        <td id="2_0" class="box"></td>
+        <td id="2_1" class="box"></td>
+        <td id="2_2" class="box"></td>
+      </tr>
+    </table>
+    <div id="msg"></div>
+    <script src="./app.js"></script>
+  </body>
+</html>
 
